--- a/src/main/resources/templates/controlStaff/list.html
+++ b/src/main/resources/templates/controlStaff/list.html
@@ -16,15 +16,20 @@
             <th>Correo electrónico</th>
             <th>Horario</th>
             <th>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}" th:href="@{/control-staff/add/{id}(id=${data[0].areaPeriod.id})}" class="btn btn-success"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
+                   th:href="@{/control-staff/add/{id}(id=${data[0].areaPeriod.id})}" class="btn btn-success"
                    role="button">Añadir</a>
             </th>
         </tr>
         </thead>
         <tbody>
         <tr th:if="${#lists.isEmpty(object)}">
-            <td colspan="6" th:if="${session.user instanceof T(app.model.MunicipalManager)}">No hay ningún personal de control registrado</td>
-            <td colspan="5" th:unless="${session.user instanceof T(app.model.ControlStaff}">No hay ningún personal de control registrado</td>
+            <td colspan="6" th:if="${session.user instanceof T(app.model.MunicipalManager)}">No hay ningún personal de
+                control registrado
+            </td>
+            <td colspan="5" th:unless="${session.user instanceof T(app.model.ControlStaff}">No hay ningún personal de
+                control registrado
+            </td>
         </tr>
         <tr th:each="object: ${object}">
             <td th:text="*{object.identification}"></td>
