--- a/src/main/resources/templates/municipalManager/list.html
+++ b/src/main/resources/templates/municipalManager/list.html
@@ -25,13 +25,18 @@
         </thead>
         <tbody>
         <tr th:if="${#lists.isEmpty(object)}">
-            <td colspan="7" th:if="${session.user instanceof T(app.model.EnviromentalManager)}">Lista de gestores y gestoras municipales</td>
-            <td colspan="6" th:unless="${session.user instanceof T(app.model.EnviromentalManager)}">Lista de gestores y gestoras municipales</td>
+            <td colspan="7" th:if="${session.user instanceof T(app.model.EnviromentalManager)}">Lista de gestores y
+                gestoras municipales
+            </td>
+            <td colspan="6" th:unless="${session.user instanceof T(app.model.EnviromentalManager)}">Lista de gestores y
+                gestoras municipales
+            </td>
         </tr>
         <tr th:each="object: ${object}">
             <td th:text="*{object.identification}"></td>
             <td th:text="*{object.name}"></td>
-            <td th:text="*{object.toSignString}" th:if="${session.user instanceof T(app.model.EnviromentalManager)}"></td>
+            <td th:text="*{object.toSignString}"
+                th:if="${session.user instanceof T(app.model.EnviromentalManager)}"></td>
             <td th:text="*{object.municipality.name}"></td>
             <td th:text="*{object.phone}"></td>
             <td>
