--- a/src/main/resources/templates/service/list.html
+++ b/src/main/resources/templates/service/list.html
@@ -26,10 +26,10 @@
             <td th:text="*{object.toScheduleString}"></td>
             <td th:text="*{object.toPeriodString}"></td>
             <td>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.updateable}"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.ended}"
                    th:href="@{/service/update/{id}(id=${object.id})}" class="btn btn-warning"
                    role="button">Actualizar</a>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.updateable}"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.ended}"
                    th:href="@{/service/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el servicio?')"
                    class="btn btn-danger" role="button">Eliminar servicio</a>
